public/css/board-style.css
/* ... */
#big-deal img {
  width: 60%;
}

#doodad {
  grid-row: 7/9;
  grid-column: 5;
  background-color: var(--doodad-bg);
  border-color: var(--doodad-border);
}

/* game area element positions  end*/

#players {
  grid-row: 3/7;
  grid-column: 1;
  background-color: white;
  border-color: black;
  margin: 1vmax 0.5vmax;
  display: flex;
  padding: 0.4vmax 1vmax;
  flex-direction: column;
  gap: 0.3vmax;
}

#game-stats {
  grid-row: 3/7;
  grid-column: 5;
  background-color: white;
  border: var(--big-border);
  border-style: dashed;
  margin: 1vmax 0.1vmax;
  display: flex;
  flex-direction: column;
}

#game-stats .heading {
  text-align: center;
  font-weight: 800;
  margin: 0.5vmax;
  padding-bottom: 1vmax;
}

#game-stats table {
  border-spacing: 0.5vmax;
}

#game-stats table th {
  max-width: 50%;
  text-align: right;
}

#game-stats table td {
  max-width: 50%;
  text-align: left;
}

#game-stats table tr {
  padding: 0.3vmax 0;
}

.interaction-space {
  grid-row: 2/8;
  grid-column: 2/5;
  margin: 0 1vmax;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-template-rows: repeat(6, 1fr);
}

/* interaction space arrangement START */

#interaction-screen {
  grid-row: 1;
  grid-column: 1/7;
  display: flex;
  justify-content: center;
}

/* Card design starts */

#main-card {
  grid-row: 2/6;
  grid-column: 2/6;
  margin: 0.5vmax 0vmax;
  border-radius: 0.5vmax;
  padding: 0.5em;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#main-card .card-heading {
  font-weight: 500;
  width: 100%;
  text-align: center;
}

#main-card .description {
  width: 100%;
}

#main-card .rule {
  width: 100%;
}

#main-card .cost {
  font-weight: 600;
  text-align: center;
}

#main-card .actions {
  width: 100%;
  height: 15%;
  display: flex;
  justify-content: space-around;
}

#main-card .actions-wrapper {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: space-around;
}

#main-card .actions .action-btn {
  width: 20%;
  height: 80%;
  border: 1px solid black;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
}

/* Card design ends */

#message-space {
  display: flex;
  grid-row: 6;
  grid-column: 1/7;
  font-weight: 600;
  align-items: center;
  justify-content: center;
}

/* dice box positions  Start*/

#dice-box .dice {
  width: 65px;
  aspect-ratio: 1;
  border: var(--def-border);
  border-radius: 0.2vmax;
  background-color: crimson;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: -1;
}

.dot {
  position: absolute;
  width: 0.7vmax;
  aspect-ratio: 1;
  border-radius: 50%;
  background-color: white;
  border: var(--def-border);
}

.two-1,
.three-1,
.four-1,
.five-1,
.six-1 {
  top: 15%;
  left: 15%;
}

.four-3,
.five-3,
.six-4 {
  left: 15%;
  bottom: 15%;
}

.one-1,
.three-2,
.five-5 {
  position: initial;
}

.four-2,
.five-2,
.six-3 {
  top: 15%;
  right: 15%;
}

.two-2,
.three-3,
.four-4,
.five-4,
.six-6 {
  bottom: 15%;
  right: 15%;
}

.six-2 {
  left: 15%;
}

.six-5 {
  right: 15%;
}

/* dice box positions  End*/

/* Initial player positions */

#rat-tile-0 {
  grid-row: 8;
  grid-column: 2/4;
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  align-items: center;
  justify-items: center;
  margin: 0.5vmax 1vmax;
}

.start>img {
  width: 100%;
}

.tile-name {
  font-weight: 500;
}

.success {
  color: green;
}

.message {
  text-align: center;
  font-size: 1vmax;
}

.warning {
  color: red;
}

#expansion-window {
  position: absolute;
  z-index: -1;
  width: 84vw;
  height: 98vh;
  max-width: 85vw;
  max-height: 100vh;
}

.pulsate {
  animation-name: pulsate;
  animation-duration: 450ms;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite;
  animation-direction: alternate-reverse;
}

@keyframes pulsate {
  from {
    transform: scale(1);
  }

  to {
    transform: scale(1.18);
  }
}

.expansion-window-screen {
  position: absolute;
  right: 0;
  width: 50%;
  height: 100%;
  background-color: white;
  border: var(--def-border);
  box-shadow: 8px 8px 8px 8px black;
  z-index: -1;
  visibility: hidden;
  padding: 1vmax;
}

.expand-window {
  animation-name: expand-window;
  animation-duration: 100ms;
  animation-timing-function: linear;
}

@keyframes expand-window {
  from {
    visibility: hidden;
    transform: translateX(100%);
  }

  to {
    transform: translateX(0);
    visibility: visible;
  }
}

.close-window {
  animation-name: close-window;
  animation-duration: 200ms;
  animation-timing-function: linear;
}

@keyframes close-window {
  from {
    transform: translateX(0);
    z-index: 1;
    visibility: visible;
  }

  to {
    transform: translateX(100%);
    z-index: 1;
    visibility: hidden;
  }
}

.active {
  z-index: 1;
}

.inactive {
  z-index: -1;
}

.ledger-window {
  display: flex;
  flex-flow: column;
  align-items: center;
  gap: 1.5vmax;
  height: 100%;
  padding: 1vmax;
}

.window-header {
  display: flex;
  padding: 0vmax 1vmax;
  font-weight: 600;
  width: 100%;
  justify-content: space-between;
}

.ledger-view {
  display: flex;
  flex-flow: column;
  width: 100%;
  height: 45vmax;
  max-height: 75vh;
}

.ledger-title {
  font-weight: 600;
}

.ledger-title,
.ledger-entry {
  display: flex;
  justify-content: space-between;
  padding: 0.5vmax;
  border-bottom: var(--def-border);
}

.ledger-title div,
.ledger-entry div {
  text-align: center;
  width: 25%;
}

.ledger-entries {
  height: 100%;
  overflow-y: scroll;
}

.window-title {
  font-size: var(--normal-font);
}

#game-nav li:hover {
  background-color: var(--grey-p);
}

/* stocks styles */

#interaction-screen {
  width: 100%;
  height: 100%;
}

.selection-box {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5vmax;
  width: 100%;
  height: 100%;
}

.close {
  color: var(--doodad-border);
  cursor: pointer;
}

.check {
  color: var(--deal-border);
  cursor: pointer;
}
/* ... */

